--- a/app/src/main/res/layout/item_joke.xml
+++ b/app/src/main/res/layout/item_joke.xml
@@ -2,32 +2,34 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/joke_item"
     android:layout_width="match_parent"
-    android:background="@color/cardview_light_background"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:background="@color/cardview_light_background">
 
     <TextView
         android:id="@+id/joke_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="16.dp"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toStartOf="@id/joke_date"
         app:layout_constraintHorizontal_weight="2.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/joke_date"
-        android:textAlignment="center"
         tools:text="Купил мужик шляпу, а она ему как раз" />
 
     <TextView
         android:id="@+id/joke_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="16.dp"
         android:gravity="center"
-        app:layout_constraintHorizontal_weight="1.0"
+        android:padding="16.dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_weight="1.0"
         app:layout_constraintStart_toEndOf="@id/joke_text"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         tools:text="01-02-1993" />
 </androidx.constraintlayout.widget.ConstraintLayout>
