--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.mainjoke.MainActivity">
+    tools:context=".presentation.mainjoke.MainFragment">
 
     <TextView
         android:id="@+id/joke_text"
